# Scientific-Computing-Toolbox

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  requirements.txt  setup.py  test.ipynb  test.py  utils.hpp
Interpolation_Module/: Makefile
Interpolation_Module/include/: Interpolation_Module.hpp
Interpolation_Module/test/: main.cpp
ODE_Module/: Makefile
ODE_Module/include/: ODE_Module.hpp
ODE_Module/test/: main.cpp
Statistics_Module/src/: Statistics_Module.cpp
data/: cubic_data.csv  ode_examples.csv  ode_tests.csv  points_1_R2.csv  points_2_R2.csv  points_3_R2.csv  points_4_R2.csv  points_R2.csv  quadratic_data.csv  random_data.csv  uniform_points_R2.csv
demos/notebooks/: interpolation.ipynb  ode.ipynb  statistics.ipynb
include/: Interpolation_Module.hpp  ODE_Module.hpp  ScientificToolbox.hpp  Statistics.hpp  Statistics_Module.hpp  Statistics_Module_old.hpp  Utilities.hpp
include/Interpolation_Module/: AnalysisInterpolation.hpp  Cardinal_Cubic_Spline.hpp  Cubic_Spline_Interpolation.hpp  DataTester.hpp  Interpolation.hpp  InterpolationTester.hpp  Interpolation_Module.hpp  Lagrange.hpp  LinearInterpolation.hpp  Newton.hpp  Newton_coefficients.hpp  Pchip.hpp  PolynomialInterpolation.hpp  small_classes.hpp  utilities_interpolation.hpp
include/ODE_Module/: ExplicitMidpointSolver.hpp  ExpressionParser.hpp  FESolver.hpp  ForwardEulerSolver.hpp  ODESolver.hpp  ODETester.hpp  ODE_Module.hpp  RK4Solver.hpp  analysis.hpp  types.hpp  utils.hpp
include/Statistics_Module/: Dataset.hpp  ImportCSV.hpp  ImportData.hpp  Statistical_analyzer.hpp  Statistics.hpp  Stats.hpp  Utils.hpp
include/Stats_Module/: ImportCSV.hpp  Stats.hpp
include/Utilities/: ImportCSV.hpp  ImportData.hpp  Lagrange_coefficients.hpp  Utilities.hpp
main/: Interpolation_Module_main.cpp  Interpolation_Module_main.py  ODE_Module_main.cpp  ODE_Module_main.py  Statistics_Module_main.cpp  Statistics_Module_main.py
ode_env/: setup_env.sh
output/: Statistics_output.txt
python_bindings/: __init__.py  common_bindings.cpp  interpolation_bindings.cpp  ode_bindings.cpp  statistics_bindings.cpp  utilities_bindings.cpp
scientific_toolbox/: ODE.py  __init__.py  interpolation.py  ode.py  stats.py
scripts/: requirements.txt  setup.py  setup_env.sh
src/: Utilities.cpp  statistics_test_1
src/Interpolation_Module/: AnalysisInterpolation.cpp  CMakeLists.txt  DataTester.cpp  InterpolationTester.cpp  Interpolation_Module.cpp  Makefile
src/ODE_Module/: CMakeLists.txt  ExplicitMidpointSolver.cpp  ExpressionParser.cpp  FESolver.cpp  ForwardEulerSolver.cpp  Makefile  ODETester.cpp  RK4Solver.cpp  TODO.md  analysis.cpp  analysis.py  plotting.py  types.cpp  utils.cpp
src/Statistics_Module/: CMakeLists.txt  Dataset.cpp  Makefile  Statistics_Module.cpp  StatsAnalyzer.cpp
src/Utilities/: Utilities.cpp
src/python_bindings/: CMakeLists.txt  interpolation_bindings.cpp  ode_bindings.cpp  statistics_bindings.cpp  utilities_bindings.cpp
stat_env/: setup_env.sh
test/: main.cpp
tests/: Interpolation_Module_main.cpp  Interpolation_Module_test.cpp  Interpolation_Module_test.ipynb  Interpolation_Module_test.py  Interpolation_Test.py  Interpolation_Tests.ipynb  Interpolation_Visualisation.py  ODE_Module_main.cpp  ODE_Module_test.cpp  ODE_Test.py  StatMod_main.cpp  Statistics_Module_main.cpp  Statistics_Module_test.cpp  Statistics_Test.py  int_tests.ipynb
tests/main/: Interpolation_Module_main.cpp  ODE_Module_main.cpp  Statistics_Module_main.cpp
